使用 Colaboratory 创建

--- a/5_2_training_a_convnet_from_scratch_on_a_small_dataset.ipynb
+++ b/5_2_training_a_convnet_from_scratch_on_a_small_dataset.ipynb
@@ -7,7 +7,7 @@
       "name": "5_2_training_a_convnet_from_scratch_on_a_small_dataset.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNljaRioV/4b+3T/yMXj0ny",
+      "authorship_tag": "ABX9TyOO94kXcKJKC6uCgo2KWDUm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7320,7 +7320,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FFfILmV_NfzN"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FFfILmV_NfzN",
+        "outputId": "efb22e3a-ac77-4cc3-d690-82c836880232"
       },
       "source": [
         "test_generator = test_datagen.flow_from_directory(\n",
@@ -7331,6 +7335,40 @@
         ")\n",
         "test_loss, test_acc = model.evaluate_generator(test_generator, steps=50)\n",
         "print('test acc:', test_acc)"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 1000 images belonging to 2 classes.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/engine/training.py:1877: UserWarning: `Model.evaluate_generator` is deprecated and will be removed in a future version. Please use `Model.evaluate`, which supports generators.\n",
+            "  warnings.warn('`Model.evaluate_generator` is deprecated and '\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "test acc: 0.9399999976158142\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HnJz4NMKbzNn"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
